--- a/tex/sections/2-theory.tex
+++ b/tex/sections/2-theory.tex
@@ -74,8 +74,8 @@ Putting everything together we can give a formal definition of the shape of a pl
 \section{The Elastic Full Procrustes Distance for Planar Curves}
 \label{sec:2-dist}
 Let us now turn to the construction of an appropriate \emph{shape distance} $d([\beta_1], [\beta_2])$ for two curves $\beta_1$, $\beta_2$.
-As the shapes $[\beta_1]$ and $[\beta_2]$ are elements of a non-Euclidean quotient space (the shape space $\mathcal{S}$), calculating a distance between them is already not straight-forward.
-A common approach is to map each equivalence class $[\beta]$ to a suitable representative, so that the distance calculation in shape space can be identified with a (much simpler) distance calculation over the representatives in the underlying functional space.
+As the shapes $[\beta_1]$ and $[\beta_2]$ are elements of a non-Euclidean quotient space (the shape space $\mathcal{S}$), calculating a distance between them is not straight-forward.
+A common approach is to map each equivalence class $[\beta]$ to a suitable representative $\widetilde \beta$, so that the distance calculation in shape space can be identified with a (much simpler) distance calculation over the representatives in an underlying functional space.
 
 To illustrate this, let us first discuss each type of shape-preserving transformation individually, starting with the Euclidean similarity transformations.
 Consider two equivalence classes with respect to translation $[\beta_1]_\text{Trl}, [\beta_2]_\text{Trl}$.
@@ -295,16 +295,18 @@ In this thesis we will use the methods laid out in \cite{Steyer2021} and impleme
   The elastic full Procrustes distance is given as $d([\beta_1],[\beta_2]) = \norm{\widetilde q_1 - \omega^{(k)} ( \widetilde q_2 \circ \gamma^{(k)} ) \sqrt{\dot{\gamma}^{(k)}}}_{\mathbb{L}^2}$.
 \end{algorithm}
 
-\noindent See \cref{fig:2-elastic-pfit} for an example of two curves that have been aligned by minimizing their elastic full Procrustes distance.
+\todo[inline]{Implement \texttt{R} function for discrete elastic full proc2d alignment.}
+%\noindent See \cref{fig:2-elastic-pfit} for an example of two curves that have been aligned by minimizing their elastic full Procrustes distance.
+%
+%\begin{figure}
+%  \centering
+%  \missingfigure{Example elastic full Procrustes fit}
+%  \caption{
+%    Elastic Procrustes Fits.
+%    Data: See \cref{fig:1-shape}.}
+%  \label{fig:2-elastic-pfit}
+%\end{figure}
 
-\begin{figure}
-  \centering
-  \missingfigure{Example elastic full Procrustes fit}
-  \caption{
-    Elastic Procrustes Fits.
-    Data: See \cref{fig:1-shape}.}
-  \label{fig:2-elastic-pfit}
-\end{figure}
 
 
 \section{The Elastic Full Procrustes Mean for Planar Curves}
@@ -362,7 +364,7 @@ Turning back to the calculation of $\hat\mu_1$, we can simplify \cref{eq:2-mean-
 \end{align}
 and we end up with a two step optimization problem consisting of an outer optimization over $\mu_q$ and an inner optimization over the set $\left\{\gamma_i\right\}_{i=1,\dots,N}$.
 Similarly to the approaches discussed in \cite{SrivastavaKlassen2016} and to \cite{Steyer2021}, we solve this iteratively by iterative \emph{template based alignment} \parencite[see e.g.][271]{SrivastavaKlassen2016}:
-In each step, the mean $\hat\mu_q$ is estimated while keeping the parametrizations $\gamma_i$ fixed, after which the $\gamma_i$ are updated by calculating the optimal warping alignment from \todo{Check in code!} the elastic full Procrustes fit of each $\widetilde q_i$ onto $\hat\mu_q$.
+In each step, the mean $\hat\mu_q$ is estimated while keeping the parametrizations $\gamma_i$ fixed, after which the $\gamma_i$ are updated by calculating the warping alignment of the full Procrustes fit of each $\widetilde q_i$ onto $\hat\mu_q$.\footnote{Note that this is \emph{not} the same as performing an elastic full Procrustes fit of $\widetilde q_i$ onto $\hat \mu_q$, because the warping and Procrustes alignments are themselves not iterated over. In not doing this, the thesis follows the approach by \citeauthor{SrivastavaEtAl2011}.}
 Mean estimation and warping alignment are iterated until the mean shape has converged.
 
 Let us consider the outer optimization problem in step $k$ for a fixed set of warping functions $\{\gamma_i^{(k)}\}_{i=1,\dots,N}$ with corresponding warping aligned normalized SRV curves $\widetilde q_i^{(k)} = ( \widetilde q_i \circ \gamma_i^{(k)}) \sqrt{\dot\gamma_i^{(k)}}$.
@@ -395,7 +397,7 @@ We can rewrite this again as a functional scalar product by considering the \emp
   \mathbb{E}[\mu_q^{(k)}] = \, \argmax_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
     \left\langle \mu_q, C^{(k)}\mu_q \right\rangle
 \end{equation}
-This is a well known problem in the context of functional principal component analysis (FPCA)---but typically only for real-valued covariance operators.
+This is a well known problem in the context of functional principal component analysis (FPCA), but typically only for real-valued covariance operators.
 From $\overline{C(s,t)} = \overline{\mathbb{E}[\widetilde q(s)\overline{\widetilde q(t)}]} = \mathbb{E}[\widetilde q(t)\overline{\widetilde q(s)}] = C(t,s)$ it follows that $\left\langle \mu_q, C \mu_q \right\rangle = \left\langle C \mu_q, \mu_q \right\rangle$ and therefore that $C$ is a \emph{self-adjoint} operator.
 The optimization problem then reduces to an eigenfunction problem 
 \begin{equation}
